# garmin-health-etl

./: .gitignore  LICENSE  README.md  export.json  garmin_etl.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: report.md  sample_garmin.json  sample_tracker.csv
src/garmin_health_etl/: __init__.py  analysis.py  cli.py  exporters.py  garmin_source.py  importers.py  models.py  sample_data.py  store.py  tracker.py  upstream.py
tests/: _path.py  test_analysis.py  test_cli.py  test_e2e.py  test_garmin_source.py  test_importers.py  test_models.py  test_sample_data.py  test_store.py  test_tracker.py
